alisherni familiyasi ozgardi

--- a/about.html
+++ b/about.html
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                     <div class="member-info">
-                        <h3>Alisher Usmanov</h3>
+                        <h3>Alisher Uzoqov</h3>
                         <p class="member-role">Founder & CEO</p>
                         <p class="member-bio">Former software engineer with 10+ years of experience in education.</p>
                     </div>
