index.html logo ozgardi

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>CoddyCamp</h1>
+                <h1>CoddyCamp IT Academy</h1>
             </div>
             <nav>
                 <div class="mobile-menu-btn">
