--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="story-image" data-aos="fade-left">
                     <div class="image-container">
-                        <img src="/placeholder.svg?height=400&width=600" alt="CoddyCamp History">
+                        <img src="/images/AI.webp" alt="CoddyCamp History">
                         <div class="image-overlay">
                             <div class="overlay-content">
                                 <h3>Since 2018</h3>
@@ -163,7 +163,7 @@
             <div class="team-grid">
                 <div class="team-member" data-aos="flip-left" data-aos-delay="100">
                     <div class="member-image">
-                        <img src="/placeholder.svg?height=300&width=300" alt="Alisher Usmanov">
+                        <img src="/images/ali.webp" alt="Alisher Usmanov">
                         <div class="social-links">
                             <a href="#"><i class="fab fa-linkedin"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
