--- a/about.html
+++ b/about.html
@@ -28,7 +28,6 @@
                     <li><a href="locations.html">Locations</a></li>
                     <li><a href="register.html">Apply</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -178,7 +177,7 @@
                 </div>
                 <div class="team-member" data-aos="flip-left" data-aos-delay="200">
                     <div class="member-image">
-                        <img src="/placeholder.svg?height=300&width=300" alt="Malika Karimova">
+                        <img src="/images/malika.webp" alt="Malika Karimova">
                         <div class="social-links">
                             <a href="#"><i class="fab fa-linkedin"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -193,7 +192,7 @@
                 </div>
                 <div class="team-member" data-aos="flip-left" data-aos-delay="300">
                     <div class="member-image">
-                        <img src="/placeholder.svg?height=300&width=300" alt="Timur Rakhimov">
+                        <img src="/images/timur.webp" alt="Timur Rakhimov">
                         <div class="social-links">
                             <a href="#"><i class="fab fa-linkedin"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -208,7 +207,7 @@
                 </div>
                 <div class="team-member" data-aos="flip-left" data-aos-delay="400">
                     <div class="member-image">
-                        <img src="/placeholder.svg?height=300&width=300" alt="Zarina Ismoilova">
+                        <img src="/images/zarina.webp" alt="Zarina Ismoilova">
                         <div class="social-links">
                             <a href="#"><i class="fab fa-linkedin"></i></a>
                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -322,7 +321,7 @@
                             </div>
                             <p>CoddyCamp has been transformative for my daughter. She went from being intimidated by technology to building her own website in just a few months. The instructors are patient, knowledgeable, and truly care about each student's progress.</p>
                             <div class="testimonial-author">
-                                <img src="/placeholder.svg?height=80&width=80" alt="Sarah Johnson">
+                                <img src="/images/sara.webp" alt="Sarah Johnson">
                                 <div>
                                     <h4>Sarah Johnson</h4>
                                     <p>Parent of Emma, 13</p>
@@ -337,7 +336,7 @@
                             </div>
                             <p>My son has always been interested in computers, but CoddyCamp helped channel that interest into productive skills. The project-based approach keeps him engaged, and he's proud to show off what he's created. It's been worth every penny.</p>
                             <div class="testimonial-author">
-                                <img src="/placeholder.svg?height=80&width=80" alt="Michael Chen">
+                                <img src="/images/michale.webp" alt="Michael Chen">
                                 <div>
                                     <h4>Michael Chen</h4>
                                     <p>Parent of David, 15</p>
@@ -352,7 +351,7 @@
                             </div>
                             <p>I was looking for an after-school activity that would be both fun and educational for my 9-year-old. CoddyCamp exceeded my expectations. The curriculum is age-appropriate yet challenging, and the staff is exceptional. My daughter looks forward to every class!</p>
                             <div class="testimonial-author">
-                                <img src="/placeholder.svg?height=80&width=80" alt="Aisha Patel">
+                                <img src="/images/munisa.webp" alt="Aisha Patel">
                                 <div>
                                     <h4>Aisha Patel</h4>
                                     <p>Parent of Leila, 9</p>
@@ -382,22 +381,22 @@
             </div>
             <div class="partners-logo-slider" data-aos="fade-up">
                 <div class="logo-slide">
-                    <img src="/placeholder.svg?height=100&width=200" alt="Partner 1">
+                    <img src="/images/1.webp" alt="Partner 1">
                 </div>
                 <div class="logo-slide">
-                    <img src="/placeholder.svg?height=100&width=200" alt="Partner 2">
+                    <img src="/images/2.webp" alt="Partner 2">
                 </div>
                 <div class="logo-slide">
-                    <img src="/placeholder.svg?height=100&width=200" alt="Partner 3">
+                    <img src="/images/3.webp" alt="Partner 3">
                 </div>
                 <div class="logo-slide">
-                    <img src="/placeholder.svg?height=100&width=200" alt="Partner 4">
+                    <img src="/images/4.webp" alt="Partner 4">
                 </div>
                 <div class="logo-slide">
-                    <img src="/placeholder.svg?height=100&width=200" alt="Partner 5">
+                    <img src="/images/5.webp" alt="Partner 5">
                 </div>
                 <div class="logo-slide">
-                    <img src="/placeholder.svg?height=100&width=200" alt="Partner 6">
+                    <img src="/images/6.webp" alt="Partner 6">
                 </div>
             </div>
         </div>
