--- a/courses.html
+++ b/courses.html
@@ -26,7 +26,6 @@
                     <li><a href="locations.html">Locations</a></li>
                     <li><a href="register.html">Apply</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -86,7 +85,7 @@
                 <!-- Programming Courses -->
                 <div class="course-card" data-age="7-9" data-category="programming" data-format="hybrid">
                     <div class="course-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="Programming Basics">
+                        <img src="/images/basic.webp" alt="Programming Basics">
                         <div class="age-group">Ages 7-9</div>
                     </div>
                     <div class="course-content">
@@ -102,7 +101,7 @@
                 </div>
                 <div class="course-card" data-age="10-14" data-category="programming" data-format="hybrid">
                     <div class="course-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="Web Development">
+                        <img src="/images/development.webp" alt="Web Development">
                         <div class="age-group">Ages 10-14</div>
                     </div>
                     <div class="course-content">
@@ -118,7 +117,7 @@
                 </div>
                 <div class="course-card" data-age="15-17" data-category="programming" data-format="hybrid">
                     <div class="course-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="Advanced Programming">
+                        <img src="/images/advanced.webp" alt="Advanced Programming">
                         <div class="age-group">Ages 15-17</div>
                     </div>
                     <div class="course-content">
@@ -136,7 +135,7 @@
                 <!-- Design Courses -->
                 <div class="course-card" data-age="10-14" data-category="design" data-format="online">
                     <div class="course-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="Digital Art & Design">
+                        <img src="/images/art.webp" alt="Digital Art & Design">
                         <div class="age-group">Ages 10-14</div>
                     </div>
                     <div class="course-content">
@@ -152,7 +151,7 @@
                 </div>
                 <div class="course-card" data-age="15-17" data-category="design" data-format="offline">
                     <div class="course-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="UI/UX Design">
+                        <img src="/images/UI.webp" alt="UI/UX Design">
                         <div class="age-group">Ages 15-17</div>
                     </div>
                     <div class="course-content">
@@ -170,7 +169,7 @@
                 <!-- AI Courses -->
                 <div class="course-card" data-age="15-17" data-category="ai" data-format="hybrid">
                     <div class="course-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="AI & Machine Learning">
+                        <img src="/images/AI.webp" alt="AI & Machine Learning">
                         <div class="age-group">Ages 15-17</div>
                     </div>
                     <div class="course-content">
@@ -186,7 +185,7 @@
                 </div>
                 <div class="course-card" data-age="10-14" data-category="ai" data-format="online">
                     <div class="course-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="Robotics for Kids">
+                        <img src="/images/robot.webp" alt="Robotics for Kids">
                         <div class="age-group">Ages 10-14</div>
                     </div>
                     <div class="course-content">
@@ -202,7 +201,7 @@
                 </div>
                 <div class="course-card" data-age="7-9" data-category="programming" data-format="offline">
                     <div class="course-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="Scratch Programming">
+                        <img src="/images/scratch.webp" alt="Scratch Programming">
                         <div class="age-group">Ages 7-9</div>
                     </div>
                     <div class="course-content">
