--- a/locations.html
+++ b/locations.html
@@ -28,7 +28,6 @@
                     <li><a href="locations.html" class="active">Locations</a></li>
                     <li><a href="register.html">Apply</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -63,7 +62,7 @@
             </div>
             <div class="map-container" data-aos="zoom-in">
                 <div class="interactive-map">
-                    <img src="/placeholder.svg?height=600&width=1000" alt="Uzbekistan Map" class="map-image">
+                    <img src="/images/map.webp" alt="Uzbekistan Map" class="map-image">
                     <div class="map-pin" style="top: 40%; left: 45%;" data-location="tashkent-center">
                         <div class="pin-icon">
                             <i class="fas fa-map-marker-alt"></i>
@@ -118,7 +117,7 @@
                     <div class="tab-panel active" id="tashkent-center">
                         <div class="location-details">
                             <div class="location-image">
-                                <img src="/placeholder.svg?height=400&width=600" alt="Tashkent Center">
+                                <img src="/images/tashkent center.webp.webp" alt="Tashkent Center">
                             </div>
                             <div class="location-info">
                                 <h3>Tashkent Center</h3>
@@ -151,19 +150,19 @@
                             <h3>Facility Gallery</h3>
                             <div class="gallery-grid">
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Computer Lab">
+                                    <img src="/images/computer.webp" alt="Computer Lab">
                                     <div class="gallery-caption">Computer Lab</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Robotics Workshop">
+                                    <img src="/images/work.webp" alt="Robotics Workshop">
                                     <div class="gallery-caption">Robotics Workshop</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Design Studio">
+                                    <img src="/images/studio.webp" alt="Design Studio">
                                     <div class="gallery-caption">Design Studio</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Classroom">
+                                    <img src="/images/classroom.webp" alt="Classroom">
                                     <div class="gallery-caption">Classroom</div>
                                 </div>
                             </div>
@@ -172,7 +171,7 @@
                     <div class="tab-panel" id="tashkent-chilanzar">
                         <div class="location-details">
                             <div class="location-image">
-                                <img src="/placeholder.svg?height=400&width=600" alt="Tashkent Chilanzar">
+                                <img src="/images/chilanzar.webp" alt="Tashkent Chilanzar">
                             </div>
                             <div class="location-info">
                                 <h3>Tashkent Chilanzar</h3>
@@ -205,19 +204,19 @@
                             <h3>Facility Gallery</h3>
                             <div class="gallery-grid">
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="AI Lab">
+                                    <img src="/images/AI.webp" alt="AI Lab">
                                     <div class="gallery-caption">AI Lab</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Coding Space">
+                                    <img src="/images/coding.webp" alt="Coding Space">
                                     <div class="gallery-caption">Coding Space</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Collaboration Area">
+                                    <img src="/images/area.webp" alt="Collaboration Area">
                                     <div class="gallery-caption">Collaboration Area</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Reception">
+                                    <img src="/images/reception.webp" alt="Reception">
                                     <div class="gallery-caption">Reception</div>
                                 </div>
                             </div>
@@ -226,7 +225,7 @@
                     <div class="tab-panel" id="samarkand">
                         <div class="location-details">
                             <div class="location-image">
-                                <img src="/placeholder.svg?height=400&width=600" alt="Samarkand">
+                                <img src="/images/samarkand.webp" alt="Samarkand">
                             </div>
                             <div class="location-info">
                                 <h3>Samarkand</h3>
@@ -259,19 +258,19 @@
                             <h3>Facility Gallery</h3>
                             <div class="gallery-grid">
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Main Hall">
+                                    <img src="/images/main.webp" alt="Main Hall">
                                     <div class="gallery-caption">Main Hall</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Computer Lab">
+                                    <img src="/images/computer.webp" alt="Computer Lab">
                                     <div class="gallery-caption">Computer Lab</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Outdoor Area">
+                                    <img src="/images/area2.webp" alt="Outdoor Area">
                                     <div class="gallery-caption">Outdoor Area</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Classroom">
+                                    <img src="/images/classroom.webp" alt="Classroom">
                                     <div class="gallery-caption">Classroom</div>
                                 </div>
                             </div>
@@ -280,7 +279,7 @@
                     <div class="tab-panel" id="bukhara">
                         <div class="location-details">
                             <div class="location-image">
-                                <img src="/placeholder.svg?height=400&width=600" alt="Bukhara">
+                                <img src="/images/buhara.webp" alt="Bukhara">
                             </div>
                             <div class="location-info">
                                 <h3>Bukhara</h3>
@@ -313,19 +312,19 @@
                             <h3>Facility Gallery</h3>
                             <div class="gallery-grid">
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Historic Building">
+                                    <img src="/images/historic.webp" alt="Historic Building">
                                     <div class="gallery-caption">Historic Building</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Tech Lab">
+                                    <img src="/images/tech.webp" alt="Tech Lab">
                                     <div class="gallery-caption">Tech Lab</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Courtyard">
+                                    <img src="/images/courtyad.webp" alt="Courtyard">
                                     <div class="gallery-caption">Courtyard</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Learning Space">
+                                    <img src="/images/learning.webp" alt="Learning Space">
                                     <div class="gallery-caption">Learning Space</div>
                                 </div>
                             </div>
@@ -334,7 +333,7 @@
                     <div class="tab-panel" id="namangan">
                         <div class="location-details">
                             <div class="location-image">
-                                <img src="/placeholder.svg?height=400&width=600" alt="Namangan">
+                                <img src="/images/namangan.webp" alt="Namangan">
                             </div>
                             <div class="location-info">
                                 <h3>Namangan</h3>
@@ -367,19 +366,19 @@
                             <h3>Facility Gallery</h3>
                             <div class="gallery-grid">
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Robotics Lab">
+                                    <img src="/images/robot.webp" alt="Robotics Lab">
                                     <div class="gallery-caption">Robotics Lab</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Programming Studio">
+                                    <img src="/images/studio.webp" alt="Programming Studio">
                                     <div class="gallery-caption">Programming Studio</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Meeting Room">
+                                    <img src="/images/room.webp" alt="Meeting Room">
                                     <div class="gallery-caption">Meeting Room</div>
                                 </div>
                                 <div class="gallery-item">
-                                    <img src="/placeholder.svg?height=200&width=300" alt="Student Lounge">
+                                    <img src="/images/lounge.webp" alt="Student Lounge">
                                     <div class="gallery-caption">Student Lounge</div>
                                 </div>
                             </div>
@@ -399,7 +398,7 @@
             <div class="tour-container" data-aos="zoom-in">
                 <div class="tour-video">
                     <div class="video-placeholder">
-                        <img src="/placeholder.svg?height=500&width=900" alt="Virtual Tour">
+                        <img src="/images/virtual tour.webp" alt="Virtual Tour">
                         <div class="play-button">
                             <i class="fas fa-play"></i>
                         </div>
