--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                     <li><a href="locations.html" data-lang-key="nav.locations">Locations</a></li>
                     <li><a href="register.html" data-lang-key="nav.apply">Apply</a></li>
                     <li><a href="blog.html" data-lang-key="nav.blog">Blog</a></li>
-                    <li><a href="faq.html" data-lang-key="nav.faq">FAQ</a></li>
                     <li><a href="contact.html" data-lang-key="nav.contact">Contact</a></li>
                 </ul>
             </nav>
@@ -90,7 +89,7 @@
                 <p>We offer both online and offline courses in programming, design, and artificial intelligence, taught by experienced instructors who are passionate about technology education.</p>
             </div>
             <div class="intro-image">
-                <img src="/placeholder.svg?height=400&width=600" alt="Students learning at CoddyCamp">
+                <img src="Students learning at CoddyCamp.webp" alt="Students learning at CoddyCamp">
             </div>
         </div>
     </section>
@@ -125,7 +124,7 @@
             <div class="course-cards">
                 <div class="course-card">
                     <div class="course-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="Programming Basics">
+                        <img src="Programming Basics.jpeg" alt="Programming Basics">
                         <div class="age-group">Ages 7-9</div>
                     </div>
                     <div class="course-content">
@@ -141,7 +140,7 @@
                 </div>
                 <div class="course-card">
                     <div class="course-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="Web Development">
+                        <img src="Web Development.jpeg" alt="Web Development">
                         <div class="age-group">Ages 10-14</div>
                     </div>
                     <div class="course-content">
@@ -157,7 +156,7 @@
                 </div>
                 <div class="course-card">
                     <div class="course-image">
-                        <img src="/placeholder.svg?height=200&width=300" alt="AI & Machine Learning">
+                        <img src="AI & Machine Learning.webp" alt="AI & Machine Learning">
                         <div class="age-group">Ages 15-17</div>
                     </div>
                     <div class="course-content">
@@ -183,16 +182,16 @@
             <h2>Student Activities</h2>
             <div class="gallery-container">
                 <div class="gallery-item">
-                    <img src="/placeholder.svg?height=300&width=400" alt="Students coding">
+                    <img src="Students coding.jpg" alt="Students coding">
                 </div>
                 <div class="gallery-item">
-                    <img src="/placeholder.svg?height=300&width=400" alt="Group project">
+                    <img src="Group project.avif" alt="Group project">
                 </div>
                 <div class="gallery-item">
-                    <img src="/placeholder.svg?height=300&width=400" alt="Presentation">
+                    <img src="Presentation.webp" alt="Presentation">
                 </div>
                 <div class="gallery-item">
-                    <img src="/placeholder.svg?height=300&width=400" alt="Robotics class">
+                    <img src="Robotics class.webp" alt="Robotics class">
                 </div>
             </div>
         </div>
@@ -206,7 +205,7 @@
                     <div class="testimonial-content">
                         <p>"CoddyCamp helped me discover my passion for programming. The teachers are amazing and the projects are fun!"</p>
                         <div class="testimonial-author">
-                            <img src="/placeholder.svg?height=60&width=60" alt="Student">
+                            <img src="Student.webp" alt="Student">
                             <div>
                                 <h4>Alex, 12</h4>
                                 <p>Web Development Course</p>
@@ -218,7 +217,7 @@
                     <div class="testimonial-content">
                         <p>"I never thought I could create my own AI model at 16, but CoddyCamp made it possible. The curriculum is challenging but very rewarding."</p>
                         <div class="testimonial-author">
-                            <img src="/placeholder.svg?height=60&width=60" alt="Student">
+                            <img src="Student1.webp" alt="Student">
                             <div>
                                 <h4>Maria, 16</h4>
                                 <p>AI & Machine Learning Course</p>
@@ -230,7 +229,7 @@
                     <div class="testimonial-content">
                         <p>"My 8-year-old son loves his programming classes at CoddyCamp. The instructors make learning code fun and engaging for young kids."</p>
                         <div class="testimonial-author">
-                            <img src="/placeholder.svg?height=60&width=60" alt="Parent">
+                            <img src="Parent.jpg" alt="Parent">
                             <div>
                                 <h4>John, Parent</h4>
                                 <p>Programming Basics Course</p>
@@ -310,7 +309,6 @@
                         <h3>Resources</h3>
                         <ul>
                             <li><a href="blog.html">Blog</a></li>
-                            <li><a href="faq.html">FAQ</a></li>
                             <li><a href="#">Privacy Policy</a></li>
                             <li><a href="#">Terms of Service</a></li>
                         </ul>
